--- a/m/mo/mod/models.com.html
+++ b/m/mo/mod/models.com.html
@@ -1,19 +1,27 @@
-<!--The following is the downloaded HTML source of the models.com privacy policy that was archived on 2001-02-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010203131300id_/http%3A//models.com/company/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the models.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604001231id_/http%3A//models.com/company/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>MODELS.com - Privacy Statement</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<script language="JavaScript"> 
+<!-- 
+function Pcertify() { 
+popupWin = window.open('http://www.bbbonline.org/cks.asp?id=201022214293213445','Participant','location=yes,scrollbars=yes,width=450,height=300') 
+window.name = 'opener'; 
+} 
+// --> 
+</script>
 </head>
 
 <body bgcolor="#FFFFFF" link="#999933" vlink="#999933" alink="#000000">
 <center>
   <table width="640" border="0">
     <tbody><tr align="center"> 
-    	 <td><img src="http://a26.g.akamai.net/7/26/1963/b890fc9d900b8b/models.com/images/logos/models_logo2.gif" width="270" height="75"></td>
+    	 <td><img src="../images/logos/models_logo2.gif" width="270" height="75"></td>
     </tr>
     <tr>
-    	 <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b><a href="http://models.com">MODELS.com</a> 
+    	 <td><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b><a href="/">MODELS.com</a> 
       &gt; company &gt; privacy statement</b></font></td>
     </tr>
   </tbody></table>
@@ -33,11 +41,32 @@
 		</tr>
           <tr bgcolor="#FFFFFF" valign="top"> 
             <td> 
-              <table width="100%" border="0" cellpadding="12">
-			 <tbody><tr>
-			   <td>
-				<p>&nbsp;</p>
-				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b><font size="3">PRIVACY STATEMENT </font></b></font></p>
+              <table width="100%" border="0" cellpadding="4">
+                <tbody><tr>
+			      <td> 
+                    <table width="100%" border="0" cellpadding="2">
+                      <tbody><tr> 
+                        <td align="center"><a href="javascript:Pcertify();"><img src="/help/bbbonline/privacyseal1.gif" alt="BBBOnLine Privacy Seal" width="85" height="130" border="1"></a><br>
+                          <br>
+                          <font face="Verdana, Arial, Helvetica, sans-serif" size="2"><font size="1"><i>Click 
+                          on the BBBOnLine seal above to verify MODELS.com's seal</i></font></font></td>
+                        <td>
+                          <p><font face="Verdana, Arial, Helvetica, sans-serif" size="3">MODELS.com 
+                            <br>
+                            is a Certified Participant of<br>
+                            the <b>BBBOnLine</b>® Privacy Program</font></p>
+                          <p><font face="Verdana, Arial, Helvetica, sans-serif" size="2">This 
+                            confirms that the information practices of MODELS.com 
+                            have been reviewed and meet the standards of the Council 
+                            of <b>Better Business Bureaus</b>' BBBOnLine Privacy 
+                            Program. <br>
+                            <font size="1"><br>
+                            </font></font></p>
+                        </td>
+                      </tr>
+                    </tbody></table>
+                    <p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b><font size="3">PRIVACY 
+                      STATEMENT </font></b></font></p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><i>OUR COMMITTMENT TO PRIVACY</i></font></p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>MODELS.com and the Privacy of Visitors and Members</b><br>
 				  Internet user privacy and confidentiality is of the utmost importance to MODELS.com. Our reputation and integrity is directly related to how we serve our Web site's users and members. <br>
@@ -47,7 +76,8 @@
 				  Provides a privacy notice and/or a link to this Privacy Statement on all pages that ask for personal information<br>
 				  </font></p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>How we use the information we collect</b>:<br>
-				  MODELS.com never releases personal identifiable information about you to any third party without your initial prior approval. If we do release your information to a third party, for example to sign you up for a third party service provided through MODELS.com that you have specifically requested, a link to the third party's privacy notice and terms of service will be displayed at the time you are offered the option to release this information.<br>
+				  MODELS.com never releases personal identifiable information about you to any third party without your initial prior approval. If we do release your information to a third party, for example to sign you up for a third party service provided through MODELS.com that you have specifically requested, a link to the third party's privacy notice and terms of service will be displayed at the time you are offered the option to release this information. These third parties currently include Emazing and PhotoChannel. Links to third party company privacy policies are provided below in the section entitled "The Way We Use Information".  <br>
+				  <br>
 				  BUT please note that MODELS.com may disclose user information in special cases when we have reason to believe that disclosing this information is necessary to identify, contact or bring legal action against someone who may be causing injury to or interference with (either intentionally or unintentionally) MODELS.com's rights or property, other MODELS.com users, or anyone else that could be harmed by such activities. MODELS.com may disclose user information when we believe in good faith that the law requires it.<br>
 				   </font></p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>Protecting children</b><br>
@@ -102,12 +132,11 @@ from you by logging on to <a href="http://my.models.com">http://my.models.com</a
 				</p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>ADVERTISERS ON MODELS.COM</b><br>
 				  All users accessing the MODELS.com Web site, and viewing advertisements on MODELS.com's Web pages, retain complete anonymity where MODELS.com is concerned. As ads are delivered, MODELS.com does not acquire or collect any personal information about you. Your name, address, phone number, and email address all remain your private properties. MODELS.com does, however, collect information which is specific to how you use the Internet. MODELS.com servers note details such as the server you are logged onto, the geographic location of the ISP you use, the type of browser you use, and your IP address. This information is obtained solely for the purpose of targeting ads and measuring a given ad's effectiveness on behalf of MODELS.com advertising clients and customers. </font></p>
-				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2">There are instances where a user may provide specific personal information in response to an ad containing a survey, purchase agreement, or registration questionnaire. For such programs, MODELS.com (or a third party working in conjunction with MODELS.com and the advertiser) acquires this information on behalf of the client. This information is used by the client so the user can receive the goods or services requested. If MODELS.com is collecting the information directly, then a privacy notice explaining the usage of the information will always be displayed at the time the information is collected.</font></p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>The Cookie Principle</b><br>
 				  MODELS.com may use cookies to improve your Web browsing experience. When you first access a MODELS.com Web page with or without an ad on it, MODELS.com or its advertising client may assign a unique random number to your computer browser - commonly known as a "cookie." We do this to measure the popularity of the different sections of the site, and to understand the way a user responds to the ads we deliver. For example, this number lets us keep track of how many times you view an ad we distribute or which articles on the site are more popular. Likewise, the cookie can help make sure you do not see the same ad over and over and can also help us improve the MODELS.com Web site content and features based on users's actual usage of the site - thus enhancing your online Web viewing experience.  If you refuse a cookie, you can still use MODELS.com but your experience may differ from those individuals using cookies.</font></p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>3rd Party Measurement Services</b><br>
 				  Often, advertisers will employ a third-party measurement service other than MODELS.com for tracking the performance of an ad program. In these instances, MODELS.com has no control over the information collected by the third party, and may not be held responsible for the actions of the third party measurement service where collected information is concerned. If you have questions regarding different third party measurement services and their respective methods of information collection, please contact feedback@models.com. </font></p>
-				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2">MODELS.com uses BurstMedia for some of its advertising banner sales displayed on the MODELS.com site. A link to BurstMedia's privacy policy is included below for your information:<br>
+				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2">MODELS.com uses BurstMedia for  advertising banner sales displayed on the MODELS.com site. A link to BurstMedia's privacy policy is included below for your information:<br>
 				  <a href="http://www.burstmedia.com/release/privacy.asp">http://www.burstmedia.com/release/privacy.asp</a></font></p>
 				<p><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><b>Disclosure</b><br>
 				  MODELS.com openly volunteers its practices of collecting information, its targeting capabilities, and its use of cookies. If you have any questions pertaining to this privacy policy and its contents, please direct your correspondence to <a href="mailto:feedback@models.com">feedback@models.com</a>. <br>
@@ -136,8 +165,10 @@ from you by logging on to <a href="http://my.models.com">http://my.models.com</a
 	   <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1">Privacy statement</font></p>
 	   <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><a href="../feedback/feedback.html">Contacting 
         us</a></font></p>
-	   <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><a href="faq.html">FAQ 
-        / Help?</a></font></p>
+	    <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><a href="/help">FAQ 
+          / Help?</a></font></p>
+        <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><a href="affiliates/index.html">Affiliate 
+          Program</a></font></p>
 	   <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#999999"><b>Coming 
         soon:</b></font></p>
 	   <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#999999">Editorial 
@@ -148,13 +179,10 @@ from you by logging on to <a href="http://my.models.com">http://my.models.com</a
         to Advertise</font></p>
 	    <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#999999">Community 
           Involvement</font></p>
-	   <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#999999">Job 
-        Openings <br>
-        </font></p>
-	   <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#999999">Affiliate 
-        Programs <br>
-        </font></p>
-	 </td>
+	    <p><font face="Verdana, Arial, Helvetica, sans-serif" size="1" color="#999999">Job 
+          Openings <br>
+          </font></p>
+	   </td>
     </tr>
     <tr> 
     	 <td width="497">&nbsp;</td>
