--- a/s/su/sur/surveysavvy.com.html
+++ b/s/su/sur/surveysavvy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the surveysavvy.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201215050id_/http%3A//www.surveysavvy.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the surveysavvy.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604001237id_/http%3A//www.surveysavvy.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
@@ -132,7 +132,19 @@ function MM_swapImage() { //v3.0
               </tr>
 			
 			<tr>
-				<td align="center"><img src="/images/bbb.gif" width="105" height="67" border="0"></td>
+				<td align="center">
+				<a href="http://www.bbbonline.org/cks.asp?id=2020108121513688" target="new">
+				<img src="/images/privacyseal.gif" alt="BBBOnLine Privacy Seal" width="85" height="130" border="0">
+				</a>
+				</td>
+			</tr>
+			<tr>
+			<td align="center">
+				<br><br>
+				<a href="https://www.truste.org/validate/12667">
+				<img src="/images/clicksealbox.gif" align="right" height="73" width="91" border="0" alt="TRUSTe: Click to Verify">
+				</a>
+			</td>
 			</tr>
             </tbody></table>
 
@@ -179,25 +191,44 @@ function MM_swapImage() { //v3.0
 3. <a href="#sec"><b>Security</b></a><br>
 4. <a href="#uns"><b>Unsubscribe</b></a><br>
 5. <a href="#ema"><b>Unsolicited E-mails</b></a><br>
+6. <a href="#con"><b>Contact Us</b></a><br>
 <br><br>
 <a name="pri"></a>
 <font face="arial, verdana, helvetica, sans-serif" size="3"><b>1. Privacy - Our First Priority</b></font><p>
-Luth Research has been conducting market research through consumer surveys for more than 23 years. Long before the birth of e-business on the Internet, we were at the forefront of protecting the privacy of personal information provided to us by survey respondents.  Now that we are able to survey millions of people via the Web -- <i>giving the consuming public even greater influence over products and services</i> -- the confidentiality of personal information shared with us remains our number one priority.  Luth Research has invested tremendous time and money to ensure that all information we receive from you is secure.  The protection of your personal information is our commitment to you.</p><p>
+Luth Research has been conducting market research through consumer surveys for more than 23 years. Long before the birth of e-business on the Internet, we were at the forefront of protecting the privacy of personal information provided to us by survey respondents. Now that we are able to survey millions of people via the Web -- <i>giving the consuming public even greater influence over products and services</i> -- the confidentiality of personal information shared with us remains our number one priority. Luth Research has invested tremendous time and money to ensure that all information we receive from you is secure. The protection of your personal information is our commitment to you. 
+</p><p>
+This confirms that SurveySavvy.com is a licensee of the TRUSTe Privacy Program.  This privacy statement discloses the privacy practices for www.surveysavvy.com. 
+</p><p>
+If you have questions or concerns regarding this statement, you should first contact <a href="mailto:support@surveysavvy.com">support@surveysavvy.com</a> by email.  If you do not receive acknowledgment of your inquiry or your inquiry has not been satisfactorily addressed, you should then contact TRUSTe <a href="http://www.truste.org/watchdog.html">http://www.truste.org/watchdog.html</a>. TRUSTe will then serve as a liaison with the Web site to resolve your concerns.
+</p><p>
+Your privacy is important to us. By participating in the Council of Better Business Bureau's BBBOnLine® Privacy Program we have made a commitment to meet the programs' strict requirements regarding how we treat your information and have it verified by BBBOnLine. Further information about this program is available at <a href="http://www.bbbonline.org">http://www.bbbonline.org</a>.
+</p><p>
 <font face="verdana, arial, helvetica, sans-serif" size="1"><a href="#top"><b>[TOP]</b></a></font>
 </p><p>
 
 <a name="reg"></a>
 <font face="arial, verdana, helvetica, sans-serif" size="3"><b>2. Registration</b></font></p><p>
-Registering to participate with Luth Research at <b>SurveySavvy.com</b> is easy.  We ask you to fill out a form providing us with certain personal information.  That information allows us to verify your eligibility, to determine which of our surveys are appropriate for you, and to contact you regarding participation in surveys.  We also use individual information to generate demographic data relating to the responses to particular surveys.  Our survey results only report aggregate information about demographic groups - never any individual information about a particular respondent.  The information you provide through the registration process is completely confidential - we never sell or share it with advertisers or any other third parties.</p><p>
+Registering to participate with Luth Research at <b>SurveySavvy.com</b> is easy. We ask you to fill out a form providing us with certain personal information. We collect demographical information such as address, phone number, gender, phone number, employment status, household income, education level, marital status, ethnicity and type of computer you use. This information allows us to verify your eligibility, to determine which of our surveys are appropriate for you, and to contact you regarding participation in surveys. We also use individual information to generate demographic data relating to the responses to particular surveys. Our survey results only report aggregate information about demographic groups - never any individual information about a particular respondent. The information you provide through the registration process is completely confidential - we never sell or share it with advertisers or any other third parties.
+</p><p>
+You can correct factual errors or review and/or update your profile at any time from the <a href="https://members.surveysavvy.com"><b>Members</b></a> area. To protect your privacy and security, we will also take reasonable steps to verity your identity before granting access or making corrections.
+</p><p>
+If we are going to use your personally identifiable information in a manner different from that stated above we will notify you via email. You will have a choice as to whether or not we use your information in this different manner. In addition, if we make any material changes in our privacy practices that do not affect user information already stored in our database, we will post a prominent notice on our web site notifying users of the change. In some cases where we post the notice we will also email users, who have opted to receive communications from us, notifying them of the changes in our privacy practices.
+</p><p>
 <font face="verdana, arial, helvetica, sans-serif" size="1"><a href="#top"><b>[TOP]</b></a></font>
 </p><p>
 
 <a name="sec"></a>
 <font face="arial, verdana, helvetica, sans-serif" size="3"><b>3. Security of Personal and Survey Information</b></font></p><p>
-The extraordinary data encryption team at Luth Research has developed one of the only market research sites in the world that utilizes Secure Socket Layers (SSL) encryption of personal information.  SSL "scrambles" all your personal information -- name, address, telephone number, e-mail address, Social Security number, and password -- when you click on "Next" to transmit your registration form to us.  Your information is not reassembled until it safely reaches our server.</p><p>
-Furthermore, you may go to our <a href="https://members.surveysavvy.com/main/"><b>Members</b></a> area at any time to check on your personal information or to view your earnings record -- but you will be required to enter your previously registered e-mail address and password before accessing any individualized data.  And any information you send to us -- corrections to your personal information, requests for checks, etc. -- will of course be encrypted by SSL.</p><p>
-All <b>SurveySavvy.com</b> members are required to use private e-mail addresses and special passwords when logging on to complete online surveys.  The engineers of our data encryption team are constantly monitoring <b>SurveySavvy.com</b>'s database to ensure the integrity of online consumer survey responses.</p><p>
-Whenever you visit <b>SurveySavvy.com</b> or complete one of our online surveys, a small data file called a cookie is attached to your hard drive.  The cookie contains information which allows us to recognize registered <b>SurveySavvy.com</b> members.  A cookie cannot read data off your hard drive or read cookie files created by other sites.  You can prevent cookies from being attached to your hard drive by turning them off in your Internet browser.  You can still visit <b>SurveySavvy.com</b> and participate in surveys even if your computer does not accept cookies.</p><p>
+The extraordinary data encryption team at Luth Research has developed one of the only market research sites in the world that utilizes Secure Socket Layers (SSL) encryption of personal information. SSL "scrambles" all your personal information -- name, address, telephone number, e-mail address, Social Security number, and password -- when you click on "Next" to transmit your registration form to us. Your information is not reassembled until it safely reaches our server. 
+</p><p>
+Furthermore, you may go to our <a href="https://members.surveysavvy.com"><b>Members</b></a> area at any time to check on your personal information or to view your earnings record -- but you will be required to enter your previously registered e-mail address and password before accessing any individualized data. And any information you send to us -- corrections to your personal information, requests for checks, etc. -- will of course be encrypted by SSL. 
+</p><p>
+All <b>SurveySavvy.com</b> members are required to use private e-mail addresses and special passwords when logging on to complete online surveys. The engineers of our data encryption team are constantly monitoring <b>SurveySavvy.com</b>'s database to ensure the integrity of online consumer survey responses. 
+</p><p>
+Whenever you visit <b>SurveySavvy.com</b> or complete one of our online surveys, a small data file called a cookie is attached to your hard drive. The cookie contains information which allows us to recognize registered <b>SurveySavvy.com</b> members. A cookie cannot read data off your hard drive or read cookie files created by other sites. You can prevent cookies from being attached to your hard drive by turning them off in your Internet browser. You can still visit <b>SurveySavvy.com</b> and participate in surveys even if your computer does not accept cookies. 
+</p><p>
+Like most web sites, we collect standard web server logs for analysis. The logging method we use includes IP address, dates/times, browser type, page hit, and referral pages. In addition, a cookie is issued that allows us to determine whether a visitor has visited us in the past. All information collected is used for either broad demographic analysis or system administration. None of the log file information collected is linked to personal information.
+</p><p>
 <font face="verdana, arial, helvetica, sans-serif" size="1"><a href="#top"><b>[TOP]</b></a></font>
 </p><p>
 
@@ -209,7 +240,14 @@ If you register with <b>SurveySavvy.com</b>, we assume that you would like to re
 
 <a name="ema"></a>
 <font face="arial, verdana, helvetica, sans-serif" size="3"><b>5. Unsolicited E-mails</b></font></p><p>
-Luth Research and <b>SurveySavvy.com</b> never spam or send unsolicited commercial e-mails.  Members who spam in order to generate referrals are ineligible for any payments from <b>SurveySavvy.com</b> and will be permanently disqualified from participation in <b>SurveySavvy.com</b>.  See our <a href="http://www.surveysavvy.com/faq/#spa"><b>Frequently Asked Questions</b></a> page for a definition of spam.</p></font><p><font face="arial, verdana, helvetica, sans-serif" size="2">
+Luth Research and <b>SurveySavvy.com</b> never spam or send unsolicited commercial e-mails.  Members who spam in order to generate referrals are ineligible for any payments from <b>SurveySavvy.com</b> and will be permanently disqualified from participation in <b>SurveySavvy.com</b>.  See our <a href="http://www.surveysavvy.com/faq/#spa"><b>Frequently Asked Questions</b></a> page for a definition of spam.</p><p>
+<font face="verdana, arial, helvetica, sans-serif" size="1"><a href="#top"><b>[TOP]</b></a></font>
+</p><p>
+
+<a name="con"></a>
+<font face="arial, verdana, helvetica, sans-serif" size="3"><b>6. Contact Us</b></font></p><p>
+If you have any questions, concerns, or comments about our privacy policies or practices, we would like to know what they are so we can address them. Please contact us at <b>(888) 588-4258</b>. Or email us by using our handy <a href="/contact"><b>Contact Us</b></a> form.
+</p></font><p><font face="arial, verdana, helvetica, sans-serif" size="2">
 <font face="verdana, arial, helvetica, sans-serif" size="1"><a href="#top"><b>[TOP]</b></a></font>
 <br>
 <br><br>
