--- a/g/ga/gam/gamedev.net.html
+++ b/g/ga/gam/gamedev.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gamedev.net privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218040310id_/http%3A//gamedev.net/info/legal.htm%23privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gamedev.net privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604001312id_/http%3A//www.gamedev.net/info/legal.htm%23privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 	<title>Legal Notices</title>
