--- a/u/us/usg/usgs.gov.html
+++ b/u/us/usg/usgs.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the usgs.gov privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217183030id_/http%3A//www.usgs.gov/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the usgs.gov privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604001427id_/http%3A//www.usgs.gov/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>USGS Privacy Policy and Disclaimers</title>
@@ -19,22 +19,19 @@ and Freedom of Information">
 <!--Buttonbars-->
 <img src="http://www.usgs.gov/images/99home/buttonbar.gif" border="0" usemap="#newhome99_buttonbar" alt="buttonbar">
 <br>
-<span style="font-size:small;font-family:geneva, arial, helvetica, sans-serif;  font-weight:400; ">
+<span style="font-size:small;font-family:verdana, arial, helvetica, sans-serif;  font-weight:400; ">
 
 </span>
-<span style="font-size:small;font-family:geneva, arial, helvetica, sans-serif;  font-weight:400; ">
+<span style="font-size:small;font-family:verdana, arial, helvetica, sans-serif;  font-weight:400; ">
 
 </span>
-<span style="font-size:small;font-family:geneva, arial, helvetica, sans-serif;  font-weight:400; ">
+<span style="font-size:small;font-family:verdana, arial, helvetica, sans-serif;  font-weight:400; ">
 
 </span>
-<span style="font-size:small;font-family:geneva, arial, helvetica, sans-serif;  font-weight:400; ">
+<span style="font-size:small;font-family:verdana, arial, helvetica, sans-serif;  font-weight:400; ">
 
 </span>
-<span style="font-size:small;font-family:geneva, arial, helvetica, sans-serif;  font-weight:400; ">
-
-</span>
-<span style="font-size:small;font-family:geneva, arial, helvetica, sans-serif;  font-weight:400; ">
+<span style="font-size:small;font-family:verdana, arial, helvetica, sans-serif;  font-weight:400; ">
 
 </span>
 
@@ -98,7 +95,7 @@ and Freedom of Information">
 
  <p>Like most web servers on the Internet, our servers collect and store all of the information that your web browser sends when it requests a web page, including:</p>
  <ul>
- <li>the name, domain, and numerical internet address of the "host" computer (typically a computer belonging to your Internet Service Provider and not your personal computer) from which you access the Internet. For example, your host computer's name is <font color="#660000">crawl1-public.alexa.com</font> and its numerical address is <font color="#660000">209.247.40.104</font>; </li>
+ <li>the name, domain, and numerical internet address of the "host" computer (typically a computer belonging to your Internet Service Provider and not your personal computer) from which you access the Internet. For example, your host computer's name is <font color="#660000">(none)</font> and its numerical address is <font color="#660000">66.28.250.176</font>; </li>
  <li>the date and time you accessed our site; </li>
  <li>the Internet address of the web page that you came from (for this visit that address is <font color="#660000">(none)</font>); </li>
  <li>the page you requested from our site and the number of characters sent to your computer; and </li>
@@ -199,7 +196,7 @@ Last modification: 13-Jul-2001@12:40<br>
 </td>
 
 <td valign="top" align="right" width="165">
-	<a href="http://firstgov.gov"><img src="http://www.usgs.gov/images/first_gov.gif" border="0" alt="FirstGov"></a>
+	<a href="http://firstgov.gov"><img src="http://www.usgs.gov/images/first_gov_sm.gif" border="0" alt="FirstGov"></a>
 </td>
 
 
